# fpl-ai-scout

./: .gitignore  FPL_AI_SCOUT_PLAN.md  README.md  ROADMAP_2627.md  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml  deploy.yml
config/: rules.yaml  settings.yaml
data/: ep_next_archive.csv  fixtures_2627.json
data/reports/: phase3_validation_latest.json  phase6_backtest_latest.json
scripts/: dress_rehearsal.py  provisional_2627.py
site/: index.html  package-lock.json  package.json  vite.config.ts
site/dev-fixtures/: chips.sample.json  league.sample.json
site/src/: App.tsx  index.css  types.ts
site/src/components/: Layout.tsx  PlayerChip.tsx  icons.tsx  ui.tsx
site/src/lib/: useJson.ts
site/src/pages/: Analytics.tsx  Chips.tsx  Dashboard.tsx  Fixtures.tsx  (+5 more)
src/fplscout/: cli.py  db.py  pipeline.py  preflight.py  publish.py
tests/: conftest.py  test_cli_kickoff.py  test_pipeline.py  test_preflight.py  test_publish.py  test_report.py
tests/backtest/: test_autosub.py  test_simulator.py
tests/decide/: test_chip_planner.py  test_optimizer.py  test_squad_state.py
tests/features/: test_build.py
tests/fixtures/: bootstrap_static.json  element_summary.json  entry.json  entry_history.json  entry_picks.json  entry_transfers.json  event_live.json  fixtures.json  leagues_classic_standings.json
tests/ingest/: test_fpl_api.py  test_health.py  test_league.py  test_live_gw.py  test_schemas.py  test_vaastav.py
tests/models/: conftest.py  test_dataset.py  test_horizon.py  test_minutes.py  test_points.py  test_team_goals.py  test_train.py
(+27 files in other folders)
