[project]
name = "fplscout"
version = "0.1.0"
description = "FPL AI Scout — prediction + optimization engine for FPL 2026/27"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "duckdb>=1.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.13",
    "statsmodels>=0.14",
    "lightgbm>=4.3",
    "pulp>=2.8",
    "highspy>=1.7",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pyyaml>=6.0",
    "typer>=0.12",
    "tenacity>=8.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.5",
]
scrape = [
    "selenium>=4.22",
]

[project.scripts]
fplscout = "fplscout.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fplscout"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: typer/FastAPI's declarative Option()/Depends() defaults are idiomatic, not bugs.
per-file-ignores = { "src/fplscout/cli.py" = ["B008"], "src/fplscout/api/**.py" = ["B008"] }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
